# p4mgr

./: README.md  config.example.json  config.json  config.json.example  howto-systemd.md  main.py  p4mgr.service  p4mgr.service.example  pyproject.toml  setup_fonts.sh  test_import.py
fonts/: README.md
p4mgrcore/: __init__.py  config.py  constants.py  display_templates.py  exceptions.py  font_manager.py  input_handler.py  main.py  utils.py  validators.py
p4mgrcore/rgbmatrix/: __init__.py  build_on_pi.sh  core.py  license.txt  setup.py
